# dialogui-htk

./: README.md  dialogui-htk.cabal  stack.yaml
examples/: CustomizedGUI.hs
src/UI/Dialogui/: HTk.hs
