name:                dialogui-htk
version:             0.1.0.0
stability:           experimental
synopsis:            HTk-based GUI for Dialogui
description:         HTk-based GUI for Dialogui
homepage:            https://github.com/astynax/dialogui-htk
license:             BSD3
license-file:        LICENSE
author:              Aleksey Pirogov (aka astynax)
maintainer:          astynax84@gmail.com
copyright:           2015 astynax
category:            UI,GUI
build-type:          Simple
cabal-version:       >=1.10

flag buildExamples
  description:         Build example executables.
  default:             False

library
  exposed-modules:     UI.Dialogui.HTk
  build-depends:       base >= 4.7 && < 5,
                       dialogui,
                       uni-htk
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable customized
  main-is:             CustomizedGUI.hs
  hs-source-dirs:      examples
  default-language:    Haskell2010
  ghc-options:         -Wall
  if flag(buildExamples)
    build-depends:     base >= 4.7 && < 5,
                       dialogui,
                       dialogui-htk,
                       uni-htk
  else
    buildable:         False
